# qemu-hmos

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  BUILD_WORKFLOWS.md  GITHUB_ACTIONS_GUIDE.md  LICENSE  LICENSE-APACHE  NAPI_FIX_SUMMARY.md  PERMISSION_FIX.md  QEMU_HARMONYOS_INTEGRATION.md  README.MD  WARP.md  build-profile.json5  comprehensive_debug.sh  debug_current_status.sh  detailed_vnc_debug.sh  diagnose_vnc_issue.sh  h origin ui-change  hvigor-config.json5  hvigorconfig.ts  manifest_tag.xml  package-lock.json  package.json  test_e2e  test_e2e_qemu_integration.cpp  test_napi_direct.js  test_napi_fix.sh  test_napi_functions  test_napi_functions.cpp  test_napi_integration.js  test_vm_config.json  test_vnc_logs.sh  tsconfig.json
.claude/: settings.local.json
.cursor/rules/: arkts-ui-structure.mdc  build-and-deployment.mdc  development-guidelines.mdc  harmonyos-specific.mdc  native-cpp-structure.mdc  project-overview.mdc  qemu-integration.mdc  third-party-dependencies.mdc
.github/ISSUE_TEMPLATE/: bug报告.md  怎么样使用.md  想要新内容.md
.github/workflows/: build-complete.yml  build-guest-tools.yml  build-hap-package.yml  build-hap.yml  build-harmonyos-so.yml  build-legacy.yml  build-legecy.yml  build-qemu-harmonyos.yml  build-qemu-so.yml  build-robust.yml  build-shared-libs.yml  build-simple.yml  build-smart.yml  build-system-gcc.yml  build-uefi-firmware.yml  build-with-system-tools.yml  build.yml  debug-compiler.yml  debug-sdk-only.yml  debug-sdk-structure.yml  debug-sdk.yml  debug-zip-structure.yml  force-fix-build.yml  native-build.yml  quick-build.yml  simple-system-build.yml  simple-test.yml  test-compiler.yml  ultimate-fix.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
cross/: aarch64-ohos.ini
docs/: AGENTS.md  BUILD_FIX_SUMMARY.md  BUILD_GUIDE.md  CLOUD_BUILD_README.md  CORRECT_BUILD_APPROACH.md  DEBUGGING_GUIDE.md  DEPENDENCY_LIBRARIES.md  FINAL_BUILD_FIX.md  FIXED_BUILD_SOLUTION.md  GITIGNORE_FIX.md  LOCAL_VS_CLOUD_BUILD.md  NAPI.md  PROGRESS.md  PROJECT_ORGANIZATION.md  PR_TPM_SUPPORT_LEIJUN_STYLE.md  PrebuiltLibs.md  QEMU_BORROWED.md  QEMU_FEATURES.md  ROADMAP-DRAFT.md  ROADMAP.md  STARRIVER_PARTNER.md  VNC_NATIVE.md  WSL_BUILD_GUIDE.md
entry/: .gitignore  build-profile.json5  oh-package-lock.json5  oh-package.json5  tsconfig.json
entry/oh_modules/qemu_hmos/: Index.d.ts  oh-package.json5
entry/oh_modules/qemu_hmos/src/main/: module.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  CMakeLists_test.txt  Makefile  cmake_install.cmake  compat_stubs.c  custom_stddef.h  libqemu_hmos.dylib  napi_compat.h  napi_impl.cpp  napi_init.cpp  napi_simple.h  pch.h  qemu_hmos.dylib  qemu_static_build.cmake  qemu_wrapper.cpp  qemu_wrapper.h  rdp_client.cpp  rdp_client.h  test_log_streaming  test_log_streaming.cpp  test_minimal_vm  test_minimal_vm.cpp  test_napi_integration  test_napi_integration.cpp  test_qemu_link.cpp  test_rdp_integration  test_vm_management  test_vm_management.cpp
entry/src/main/cpp/build-native/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
entry/src/main/cpp/qemu_test/: CMakeCache.txt  Makefile  cmake_install.cmake  qemu_link_test
entry/src/main/cpp/test_files/vms/test-vm/: config.json  status.json
entry/src/main/cpp/types/libqemu_hmos/: Index.d.ts  Index.ets  hvigorfile.ts  oh-package.json5
entry/src/main/ets/: arkui-stubs.d.ts  global.d.ts
entry/src/main/ets/abilities/: ConsoleWindowAbility.ets  RDPWindowAbility.ets  VNCWindowAbility.ets
entry/src/main/ets/common/: ThemeManager.ets  VNCConnection.ets
entry/src/main/ets/components/: CommandPalette.ets  CustomTitleBar.ets  DownloadManager.ets  EmptyState.ets  IsoManager.ets  NavRail.ets  RDPDisplay.ets  RdpTimeoutDialog.ets  VMCard.ets  VMCreateDialog.ets  VMCreateWizard.ets  VMListPanel.ets  VNCDisplay.ets  VirtualKeyHub.ets  WelcomeView.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/managers/: AppSettings.ets  DownloadManager.ets  QemuVMManager.ets  VNCNativeClient.ets  VNCSettings.ets  VmStore.ets
entry/src/main/ets/pages/: Apps.ets  ConsoleWindow.ets  DownloadPage.ets  Index.ets  Mine.ets  MinePage.ets  OfficeApps.ets  RDPViewer.ets  RDPWindow.ets  Settings.ets  VMManagementPage.ets  VMs.ets  VNCNativeViewer.ets  VNCViewer.ets  VNCWindow.ets
entry/src/main/ets/types/: qemu.d.ts  qemu_hmos.d.ts
entry/src/main/ets/utils/: BreakpointSystem.ets  DisplayManager.ets  FirmwareManager.ets  KeymapsManager.ets  NetworkManager.ets  OneDriveManager.ets  RDPAuthManager.ets  RDPDriveManager.ets  RDPInputHandler.ets  RDPPerformanceManager.ets  RdpConnectionManager.ets  StoragePaths.ets  Windows11CompatibilityTester.ets  Windows11Config.ets
entry/src/main/ets/workers/: qemu_worker.ts
entry/src/main/libs/arm64-v8a/: libqemu_hmos.so.backup
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json  shortcuts_config.json  string.json
entry/src/main/resources/dark/element/: color.json
entry/src/main/resources/rawfile/novnc/: README.txt  vnc.html
oh_modules/.ohpm/: lock.json5
patches/qemu/: 0001-ohos-builtin-minimal-tpm2.patch  0002-ohos-ohaudio-audiodev.patch
scripts/: build-local-complete.sh  build-local-test.sh  build-mac-local.sh  build-qemu-cloud.sh  build-qemu-correct.sh  build-qemu-debug.sh  build-qemu-fixed.sh  build-qemu-simple.sh  check-sdk.sh  check_qemu_status.sh  comprehensive_debug.sh  debug-sdk-paths.sh  detailed_qemu_diag.sh  simple_check.sh
tools/: build_freerdp_ohos.sh  build_libqemu_hmos.sh  build_libqemu_hmos_linux.sh  build_libvnc_ohos.sh  build_native.bat  build_ohos_deps.sh  build_openssl_ohos.sh  build_qemu_full_linux.sh  build_virtiofs.sh  check_ndk_linux.sh  extract_psd.py
